--- a/basketball-stat-tracker/src/Container/NewMatchForm.css
+++ b/basketball-stat-tracker/src/Container/NewMatchForm.css
@@ -1,7 +1,3 @@
-.new-match-form h1, h3{
-  text-align: center;
-}
-
 .team-form-container{
   display: flex;
 }
@@ -13,6 +9,7 @@
 }
 
 #submit-btn{
-  position: relative;
-  margin-left: 70%;
+  width: 200px;
+  margin-left: auto;
+  margin-right: auto;
 }
