--- a/basketball-stat-tracker/src/Container/StatSheet.css
+++ b/basketball-stat-tracker/src/Container/StatSheet.css
@@ -1,21 +1,17 @@
-div.court div:nth-child(1) {
-    height: 50%;
-    margin: 10px;
-    padding: 2.5px;
-    border: 2.5px dashed blue;
-}
-
-div.court div:nth-child(2) {
-    height: 50%;
-    margin: 10px;
-    padding: 2.5px;
-    border: 2.5px dashed red;
-}
 
 .bench{
     position:absolute;
     display: flex;
     justify-content: space-evenly;
     width: 100%;
-    bottom: 10px;
+}
+
+.player{
+    text-align: center;
+    padding: 5px;
+    margin: 5px;
+    max-height: 30px;
+    max-width: 30px;
+    color: white;
+
 }
