--- a/basketball-stat-tracker/src/Container/StatSheet.css
+++ b/basketball-stat-tracker/src/Container/StatSheet.css
@@ -1,17 +1,112 @@
+.stats{
+    height: 100%;
+}
 
-.bench{
-    position:absolute;
-    display: flex;
-    justify-content: space-evenly;
-    width: 100%;
+h2 {
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-right: 5px;
+    margin-left: 5px;
 }
 
 .player{
     text-align: center;
-    padding: 5px;
-    margin: 5px;
     max-height: 30px;
-    max-width: 30px;
-    color: white;
+    width: 20px;
+    color: black;
+    user-select: none;
+    border-radius: 20px;
+    font-weight: 500;
+}
 
+h5{
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+ul{
+    margin: 0;
+    padding: 0;
+    height: 40px;
+}
+
+li {
+    padding: 5px;
+    margin: 5px; 
+    list-style: none;
+}
+
+.homeTeamBench{
+    width: fit-content;
+    margin-right: auto;
+    margin-left: auto;
+    display: flex;
+}
+.awayTeamBench{
+    width: fit-content;
+    margin-right: auto;
+    margin-left: auto;
+    display: flex;
+}
+
+/* HOME TEAM STYLES */
+.homeTeamContainer{
+    height: 35%;
+}
+
+div.homePlayers{
+    display: flex;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+div.homePlayers ul{
+    padding: 5px;
+    display: flex;
+    background-color: #779ecb;
+}
+
+div.homePlayers div:nth-child(1) ul {
+    width: 250px;
+    border-right: 1px solid black;
+    border-top-left-radius: 20px;
+}
+
+div.homePlayers div:nth-child(2) ul {
+    width: fit-content;
+    border-bottom-right-radius: 20px;
+}
+
+/* AWAY TEAM STYLES */
+.awayTeamContainer{
+    height: 35%;
+}
+div.awayPlayers{
+    display: flex;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+div.awayPlayers ul{
+    padding: 5px;
+    display: flex;
+    background-color: #ff6961;
+}
+
+div.awayPlayers div:nth-child(1) ul {
+    width: 250px;
+    border-right: 1px solid black;
+    border-top-left-radius: 20px;
+}
+
+div.awayPlayers div:nth-child(2) ul {
+    width: fit-content;
+    border-bottom-right-radius: 20px;
+}
+
+/* SCORE BOARD*/
+.scoreBoard{
+    text-align: center;
 }
