--- a/basketball-stat-tracker/src/component/PlayerRow.css
+++ b/basketball-stat-tracker/src/component/PlayerRow.css
@@ -1,6 +1,7 @@
 .point-control{
     padding-right: 0 !important;
     padding-left: 0 !important;
+    text-align: center !important;
 }
 
 button{
