refactored stat sheet

--- a/basketball-stat-tracker/src/component/PlayerRow.css
+++ b/basketball-stat-tracker/src/component/PlayerRow.css
@@ -1,3 +1,6 @@
+.table-header-cell{
+    text-align: center !important;
+}
 .point-control{
     padding-right: 0 !important;
     padding-left: 0 !important;
