--- a/basketball-stat-tracker/src/Container/StatSheet.css
+++ b/basketball-stat-tracker/src/Container/StatSheet.css
@@ -35,17 +35,23 @@ h5.team-name{
 }
 
 .Court{
-    display: flex !important;
-    flex-direction: column;
-    justify-content: space-evenly;
-    height: 300px;
+    padding: 5px;
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-rows: repeat(5, auto);
+    grid-gap: 5px;
+    align-content: center;
+    height: 250px;
 }
 
 .Bench{
-    display: flex !important;
-    flex-direction: column;
-    justify-content: space-evenly;
-    height: 300px;
+    padding: 5px;
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-rows: repeat(7, auto);
+    grid-gap: 5px;
+    align-content: center;
+    height: 250px;
     border-bottom-right-radius: 20px;
 }
 
@@ -59,6 +65,7 @@ h5.area{
 
 .player{
     text-align: center;
+    height: 20px;
     width: 20px;
     color: black;
     user-select: none;
