--- a/basketball-stat-tracker/src/component/PlayerRow.css
+++ b/basketball-stat-tracker/src/component/PlayerRow.css
@@ -2,6 +2,7 @@
     text-align: center !important;
 }
 .point-control{
+    padding: 5px !important;
     padding-right: 0 !important;
     padding-left: 0 !important;
     text-align: center !important;
