--- a/basketball-stat-tracker/src/Container/StatSheet.css
+++ b/basketball-stat-tracker/src/Container/StatSheet.css
@@ -2,6 +2,10 @@ body{
     background-color: #F5F5F5;
 }
 
+.container{
+    padding: 2vh;
+}
+
 .stat-container{
     display: flex;
     justify-content: space-evenly;
