--- a/basketball-stat-tracker/src/Container/NewMatchForm.css
+++ b/basketball-stat-tracker/src/Container/NewMatchForm.css
@@ -8,8 +8,14 @@
   margin-right: auto;
 }
 
-#submit-btn{
+#btn-div{
   width: fit-content;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 3vh;
+}
+
+#btn-div > button{
+  margin-left: 10px;
+  margin-right: 10px;
 }
